# SKELY

./: LICENSE.md  README.md  index.html  main.py  my_resource.pyxres  pyproject.toml  skely.html  skely.py  skely.pyxapp
contracts/: skely_token.vy
game/: skely.py  skely.pyxapp
script/: deploy.py
