[project]
name = "ethonline-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moccasin>=0.4.2",
    "python-dotenv>=1.1.1",
    "pyxel>=2.5.8",
    "snekmate>=0.1.2",
]

[tool.moccasin.project]
dependencies = ["snekmate"]
